--- a/config/boards/shields/totem/totem.conf
+++ b/config/boards/shields/totem/totem.conf
@@ -1,5 +1,4 @@
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000  # (10 minutes in milliseconds)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000  # 5 minutes in milliseconds
 CONFIG_BT_IDLE_SLEEP_TIMEOUT=30000  # Bluetooth sleeps after 30 seconds
 CONFIG_PM_DEVICE=y  # Enables power management
-CONFIG_USB_DEVICE_STACK=n  # Disables USB when sleeping (optional)
