--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,5 +1,8 @@
-CONFIG_ZMK_USB_LOGGING=n 
+CONFIG_ZMK_USB_LOGGING=n
+
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000  # 5 minutes in milliseconds
-CONFIG_BT_IDLE_SLEEP_TIMEOUT=30000  # Bluetooth sleeps after 30 seconds
-CONFIG_PM_DEVICE=y  # Enables power management
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000  
+# 5 minutes in milliseconds
+
+CONFIG_PM=y  # Enables power management framework
+CONFIG_PM_DEVICE=y  # Enables peripheral power management
