--- a/config/totem.conf
+++ b/config/totem.conf
@@ -6,3 +6,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 CONFIG_PM=y  # Enables power management framework
 CONFIG_PM_DEVICE=y  # Enables peripheral power management
+
+# Enable battery reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+# Enable split battery monitoring (report both sides)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
