Refactor totem.conf for clarity and formatting

--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,15 +1,22 @@
 CONFIG_ZMK_USB_LOGGING=n
 
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000 # 30 seconds in milliseconds -> before entering idle mode
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000 # 10 minutes in milliseconds -> before entering deep sleep
+CONFIG_ZMK_IDLE_TIMEOUT=30000 
+# 30 seconds in milliseconds -> before entering idle mode
 
-#CONFIG_PM=y  # Enables power management framework
-#CONFIG_PM_DEVICE=y  # Enables peripheral power management
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000 
+# 10 minutes in milliseconds -> before entering deep sleep
+
+#CONFIG_PM=y  
+# Enables power management framework
+
+#CONFIG_PM_DEVICE=y  
+# Enables peripheral power management
 
 # Enable battery reporting
 CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800 # 30 minutes in seconds
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800 
+# 30 minutes in seconds
 
 # Enable split battery monitoring (report both sides)
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
