--- a/config/totem.conf
+++ b/config/totem.conf
@@ -26,7 +26,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_POSITION_QUEUE_SIZE=5
 
 # Prevents mac wake up from BLE packet
-CONFIG_BT_BAS=n
+#CONFIG_BT_BAS=n
 
 # Reduce BT controller transmission power to -10 dBm -> saves battery life | reduces ble range
 CONFIG_BT_CTLR_TX_PWR_MINUS_10=y
